work on description of the layers, also other tweaks throughout the paper
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5046 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -205,8 +205,8 @@ The Tools used for authoring and rendering must comply to these recommendations 
 
 \subsection{A layered approach to the spatialization workflow}\label{sec:layers}
 %TROND, J45CH\\
-In order to better grasp the structural and methodological entities used in a spatialization process, a layered approach is proposed, which defines the problem domains in an ascending order of abstraction (Table \ref{fig:layers}). This model gets its inspiration from the OSI network model\footnote{\url{http://en.wikipedia.org/wiki/OSI_model}} which is an abstract description for layered communications and computer network protocol design. OSI (Open Systems Interconnection) divides network architecture into seven layers which range, from top to bottom, between the Application and  Physical Layers.
-Each OSI-layer contains a collection of conceptually similar functionalities that provide services to the layer above it and receives service from the layer below it. The adaptation of concepts originally designed for network protocols to computer music systems was already proven to be valid for instance in creating the popular Open Sound Control (OSC) protocol \cite{wright1997osc}. 
+In order to better grasp the structural and methodological entities used in a spatialization process, a layered approach is proposed, which defines the problem domains in an ascending order of abstraction (Table \ref{fig:layers}). This model gets its inspiration from the OSI network model\footnote{\url{http://en.wikipedia.org/wiki/OSI_model}}, which is an abstract description for layered communications and computer network protocol design. OSI (Open Systems Interconnection) divides network architecture into seven layers that range from top to bottom between the Application and Physical Layers.
+Each OSI-layer contains a collection of conceptually similar functionalities that provide services to the layer above it and receives service from the layer below it. The adaptation of concepts originally designed for network protocols to computer music systems was legitimized, for instance, in creating the popular Open Sound Control (OSC) protocol \cite{wright1997osc}. 
 %A layer is a collection of conceptually similar functions that provide services to the layer above it and receives service from the layer below it. For example, a layer that provides error-free communications across a network provides the path needed by applications above it, while it calls the next lower layer to send and receive packets that make up the contents of the path.
 %
 %
@@ -252,7 +252,8 @@ Each OSI-layer contains a collection of conceptually similar functionalities tha
 	\end{figure}
 	%\end{center}  
 \subsubsection{Physical Device Layer}
-TODO 
+The major functionality of the Physical Device Layer is to establish the physical relationship between computer and user.                                                       
+It defines the electrical and physical specifications of peripherical devices that creates the acoustical signals, such as soundcards, loudspeakers, and headphones, but also of interface devices and computer screens to visualize and control spatial sound processes. 
 \subsubsection{Decoded Audio Stream Layer}
 TODO
 \subsubsection{Encoded Audio Stream Layer}	
@@ -277,22 +278,22 @@ TODO: maybe the tools should be organized according to the layers - hmmm... yes,
 The ICST ambisonics tools comprise a set of four externals for Max/MSP. The two DSP externals ambiencode~ and ambidecode~ generate and decode Higher Order Ambisonics. They reach 3rd order with Furse-Malham Formulas in version 1.2, and 5th order using either the Furse-Malham or Normalized 3D formulas in version 2.0. The two control externals ambimonitor and ambicontrol complete the set. Ambimonitor presents the user with a GUI displaying point sources in an abstract 2D or 3D space, various key commands, snapshot and file I/O capabilities and it generates coordinate information for the DSP objects. Ambicontrol provides a number of methods that control motion of points in the Ambimonitor's dataset. Automated motions such as rotation, random motion, optionally constrained in bounding volumes and user defined trajectories can be applied to single or grouped points. The import/export format for the trajectories and state snapshots is a simple XML text file, which will be replaced by a SpatDIF compliant formatting in a next release. \cite{Schacher:2006ambi_max} At ICST a different panning algorithm \cite{Neukom:2008ambipan} was derived from in-phase ambisonic decoding and also coded as Max/MSP external. Ambipanning~ implements the Ambisonic Equivalent Panning, which transcodes in one step a set of mono sources onto a ideally circular speaker setup with an arbitrary number of speakers. The algorithm works with a continuous order factor, which permits to apply per point individually varying directivity responses. This external understands the same command syntax and becomes interchangeable with the other ICST ambisonic DSP objects. 
 \subsection{Jamoma}
 
-Jamoma\footnote{\url{http://www.jamoma.org/}} is a collaborative set of software tools.  It includes DSP libraries and a framework for structuring Max/MSP patches.\\
+Jamoma\footnote{\url{http://www.jamoma.org}} is a collaborative set of software tools.  It includes DSP libraries and a framework for structuring Max/MSP patches.\\
 The DBAP spatialization algorithm \cite{dbapICMC09} is included in the Jamoma library as a Max/MSP external. DBAP focuses on applications that extend beyond traditional loudspeaker arrangements.  Limitations explained in \ref{sec:digital audio workstations - DAW} that are based on an ideal model rather than actual positions of loudspeakers in the room can thus be overcome.  DBAP has proven to be particularly useful in theatre and installation applications.\\
-In addition to the libraries, the Jamoma Modular Framework\cite{Place:2006jamoma} supplies a set of spatialization tools as modules wrapping various algorithms (VBAP \cite{Pulkki:2000vbap_max}, DBAP \cite{dbapICMC09}, ambisonics \cite{Schacher:2006ambi_max}, and ViMic\cite{CMJ08-VIMIC}) that can be combined and substituted with each other to quickly compare, audition, or adapt each of them to a specific context. 
-Moreover, a number of effects processors (Doppler, Airfilter, RollOff, Reverb) and utilities (loudspeaker setup, FIXME:SPL compensation, FIXME:delay compensation, multichannel meters and auxiliaries) are also available in the distribution.
-All these modules have been designed according to a common namespace model, thus allowing the user to seamlessly connect the modules in minutes and then experiment with the ideas presented here.  In particular, the interoperability of different algorithms such as Holo-Edit, ICST Ambimonitor, and physical interfaces (i.e. JazzMutant's Lemur \footnote{\url{http://www.jazzmutant.com/}} or TUIO-compliant \cite{kaltenbrunner2005tpt} devices using the Max Multitouch Framework \footnote{\url{http://code.google.com/p/mmf/}}) can be quickly mapped to the aforementioned rendering models.\\
-Current low-level spatial-systems research in Jamoma is focused on the development of Jamoma Multicore \footnote{\url{http://code.google.com/p/jamulticore/}}, a coding layer for the creation of dynamic audio graph topologies.  One application of Jamoma Multicore is the creation of ``multichannel signals" that can be passed between objects in Max/MSP or Pure Data.  These multichannel signals are also dynamic, meaning that the number of channels can be changed instantaneously and the audio graph will adapt accordingly.  The signals can transport audio samples in the traditional sense, or carry ambisonics encoded signals of the Nth order.
+In addition to the libraries, the Jamoma Modular Framework\cite{Place:2006jamoma} supplies a set of spatialization tools as modules wrapping various algorithms (VBAP \cite{Pulkki:2000vbap_max}, DBAP \cite{dbapICMC09}, ambisonics \cite{Schacher:2006ambi_max}, and ViMiC\cite{CMJ08-VIMIC}) that can be combined and substituted with each other to quickly compare, audition, or adapt each of them to a specific context. 
+Moreover, a number of spatial effects processors (Doppler, Airfilter, RollOff, Reverb), multichannel recording \& playback modules, and other utilities to facilitate the work with multichannel audio (loudspeaker setup definition tools including sound-pressure and delay compensation for non-equidistant arrangements, multichannel auxiliaries, level-meters) are part of Jamoma.
+All these modules have been designed according to a common namespace model, that enables the user to rapidly connect or exchange modules. In particular, the interoperability of the described Holo-Edit and ICST Ambimonitor with physical interfaces, such as Lemur\footnote{\url{http://www.jazzmutant.com}} or TUIO-compliant \cite{kaltenbrunner2005tpt} multitouch devices\footnote{We apply the Max Multitouch Framework \url{http://code.google.com/p/mmf}.}) facilitates to create individual mappings to Jamoma's rendering modules.\\
+Current low-level spatial-systems research in Jamoma is focused on the development of Jamoma Multicore \footnote{\url{http://code.google.com/p/jamulticore}}, a coding layer for the creation of dynamic audio graph topologies.  One application of Jamoma Multicore is the creation of ``multichannel signals" that can be passed between objects in Max/MSP or Pure Data.  These multichannel signals are also dynamic, meaning that the number of channels can be changed instantaneously and the audio graph will adapt accordingly.  The signals can transport audio samples in the traditional sense, or carry ambisonics encoded signals of the Nth order.
 
  
 \subsection{Holo-Edit}
 Initiated by L. Pottier \cite{PottierDAFX98}, Holo-Edit is part of the GMEM Holophon project and dedicated to multi-source and multi-speaker spatialization. This standalone application \cite{Pottier05} is written in Java / OpenGL and uses the timeline paradigm found in traditional DAWs for recording, editing, and playback of spatialization control messages. The data is manipulated in the form of trajectories or sequences of time-tagged points in a 3D space. These trajectories can be generated or modified by an expandable set of tools allowing specific spatial and temporal behaviors including symmetry, proportion, translation, acceleration, and local exaggeration. Different scene representation windows allow the user to view and modify data focusing on different aspects: \emph{Room} by a top view of the virtual space, \emph{Time Editor} which is related to the classic automation curve view in DAWs and \emph{Score} which represents the whole composition in a multi-track block-based view.\\
 An important feature of Holo-Edit is the ability to represent sound waveforms beside % FIXME: Tim notes that this is not the correct use of the word beside, and I'm not really sure what you mean...
 their trajectories. This allows the synchronization of sound cues to their associated movements.
-The model of space/time representation has been left intentionally generic, thus it can control a variety of different spatialization methods and auditory virtual environment such as \cite{CMJ08-VIMIC}. %Even if Holo-Edit is combined with a auditory virtual environment such as \cite{CMJ08-VIMIC}, its generic nature allows to use it in a more abstract way, thinking more of movements in an arbitrary space ( may it be acoustic, symbolic, semiotic ...).[TODO: I changed something here, but I don't know what you really mean] [ FIXED BY CHARLES : I wanted to point that the movements composed are not made to be strongly linked with the scales of our physical world. But we can absolutly erase this line as it's not fundamental, was just a note ]
-Holo-Edit uses Open Sound Control (OSC) as a communication protocol. It has been successfully used in varied media environments as mentioned in section \ref{sec:Media programming environments} using assorted spatial renderers, such as VBAP, Ambisonics, or DBAP. 
-In these scenarios the main challenge is to adapt and format the data stream to fit the specific algorithm syntax (e.g. coordinate system, dimensions, units).
-Consequently a communication interface has been developed and integrated into Jamoma as a first step towards SpatDIF compliancy of Holo-Edit. It thus adds to the features of trajectory composition playback with the associated sound cues according to the edited score, by making provisions to record them from any real-time control inputs available in Jamoma. 
+The model of space/time representation has been left intentionally generic, thus it can control a variety of different spatialization methods and AVEs. %Even if Holo-Edit is combined with a auditory virtual environment such as \cite{CMJ08-VIMIC}, its generic nature allows to use it in a more abstract way, thinking more of movements in an arbitrary space ( may it be acoustic, symbolic, semiotic ...).[TODO: I changed something here, but I don't know what you really mean] [ FIXED BY CHARLES : I wanted to point that the movements composed are not made to be strongly linked with the scales of our physical world. But we can absolutly erase this line as it's not fundamental, was just a note ]
+Holo-Edit uses OSC to communicate with various media programming environments presented in section \ref{sec:Media programming environments} and control various spatial renderers, including VBAP, Ambisonics, or DBAP. 
+The main challenge in these scenarios is to adapt and format the data stream that fits the specific rendering algorithm syntax (e.g. coordinate system, dimensions, units).
+As a step towards SpatDIF compliancy a Holo-edit communication interface was developed for Jamoma. It thus adds to the features of trajectory composition playback with the associated sound cues according to the edited score, by making provisions to record them from any real-time control inputs available in Jamoma. 
   
 
 
