condensing the Jamoma-part
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5050 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -278,12 +278,13 @@ TODO: maybe the tools should be organized according to the layers - hmmm... yes,
 The ICST ambisonics tools comprise a set of four externals for Max/MSP. The two DSP externals ambiencode~ and ambidecode~ generate and decode Higher Order Ambisonics. They reach 3rd order with Furse-Malham Formulas in version 1.2, and 5th order using either the Furse-Malham or Normalized 3D formulas in version 2.0. The two control externals ambimonitor and ambicontrol complete the set. Ambimonitor presents the user with a GUI displaying point sources in an abstract 2D or 3D space, various key commands, snapshot and file I/O capabilities and it generates coordinate information for the DSP objects. Ambicontrol provides a number of methods that control motion of points in the Ambimonitor's dataset. Automated motions such as rotation, random motion, optionally constrained in bounding volumes and user defined trajectories can be applied to single or grouped points. The import/export format for the trajectories and state snapshots is a simple XML text file, which will be replaced by a SpatDIF compliant formatting in a next release. \cite{Schacher:2006ambi_max} At ICST a different panning algorithm \cite{Neukom:2008ambipan} was derived from in-phase ambisonic decoding and also coded as Max/MSP external. Ambipanning~ implements the Ambisonic Equivalent Panning, which transcodes in one step a set of mono sources onto a ideally circular speaker setup with an arbitrary number of speakers. The algorithm works with a continuous order factor, which permits to apply per point individually varying directivity responses. This external understands the same command syntax and becomes interchangeable with the other ICST ambisonic DSP objects. 
 \subsection{Jamoma}
 
-Jamoma\footnote{\url{http://www.jamoma.org}} is a collaborative set of software tools.  It includes DSP libraries and a framework for structuring Max/MSP patches.\\
-The DBAP spatialization algorithm \cite{dbapICMC09} is included in the Jamoma library as a Max/MSP external. DBAP focuses on applications that extend beyond traditional loudspeaker arrangements.  Limitations explained in \ref{sec:digital audio workstations - DAW} that are based on an ideal model rather than actual positions of loudspeakers in the room can thus be overcome.  DBAP has proven to be particularly useful in theatre and installation applications.\\
-In addition to the libraries, the Jamoma Modular Framework\cite{Place:2006jamoma} supplies a set of spatialization tools as modules wrapping various algorithms (VBAP \cite{Pulkki:2000vbap_max}, DBAP \cite{dbapICMC09}, ambisonics \cite{Schacher:2006ambi_max}, and ViMiC\cite{CMJ08-VIMIC}) that can be combined and substituted with each other to quickly compare, audition, or adapt each of them to a specific context. 
-Moreover, a number of spatial effects processors (Doppler, Airfilter, RollOff, Reverb), multichannel recording \& playback modules, and other utilities to facilitate the work with multichannel audio (loudspeaker setup definition tools including sound-pressure and delay compensation for non-equidistant arrangements, multichannel auxiliaries, level-meters) are part of Jamoma.
-All these modules have been designed according to a common namespace model, that enables the user to rapidly connect or exchange modules. In particular, the interoperability of the described Holo-Edit and ICST Ambimonitor with physical interfaces, such as Lemur\footnote{\url{http://www.jazzmutant.com}} or TUIO-compliant \cite{kaltenbrunner2005tpt} multitouch devices\footnote{We apply the Max Multitouch Framework \url{http://code.google.com/p/mmf}.}) facilitates to create individual mappings to Jamoma's rendering modules.\\
-Current low-level spatial-systems research in Jamoma is focused on the development of Jamoma Multicore \footnote{\url{http://code.google.com/p/jamulticore}}, a coding layer for the creation of dynamic audio graph topologies.  One application of Jamoma Multicore is the creation of ``multichannel signals" that can be passed between objects in Max/MSP or Pure Data.  These multichannel signals are also dynamic, meaning that the number of channels can be changed instantaneously and the audio graph will adapt accordingly.  The signals can transport audio samples in the traditional sense, or carry ambisonics encoded signals of the Nth order.
+Jamoma\footnote{\url{http://www.jamoma.org}} is a collaborative set of software tools\cite{Place:2006jamoma}. It consists of a DSP libraries and a framework for structuring Max/MSP patches.\\
+Among others, the Jamoma Modular Framework provides a modular set of popular spatialization algorithms, as there were VBAP \cite{Pulkki:2000vbap_max}, ambisonics \cite{Schacher:2006ambi_max}, ViMiC\cite{CMJ08-VIMIC}, and , DBAP \cite{dbapICMC09}. ViMiC and DBAP can be applied to non-conventional and non-standardized loudspeaker arrangements and therefore provides alternative solutions to the limitations outlined in section \ref{sec:digital audio workstations - DAW}. In particularly, DBAP has been proven to be useful in theaters and sound installation context.\\   
+Furthermore, a number of spatial effects modules (Doppler, Airfilter, RollOff, Reverb), as well as multichannel recording \& playback modules, and other utilities to facilitate the work with multichannel audio (loudspeaker setup definition tools including sound-pressure and delay compensation for non-equidistant arrangements, multichannel auxiliaries, level-meters) are provided.
+%that can be combined and substituted with each other to quickly compare, audition, or adapt each of them to a specific context. 
+All these modules have been designed according to a common namespace model, that enables the user to rapidly combine or substituted modules in order to adapt to a specific requierements. In particular, the interoperability with Holo-Edit, ICST Ambimonitor and physical interfaces, such as Lemur\footnote{\url{http://www.jazzmutant.com}} or TUIO-compliant \cite{kaltenbrunner2005tpt} multitouch devices\footnote{We apply the MMF: \url{http://code.google.com/p/mmf}.} facilitates the individual control to Jamoma's rendering modules.\\
+Current low-level spatial-systems development in Jamoma is focused on Jamoma Multicore\footnote{\url{http://code.google.com/p/jamulticore}}, a coding layer for the creation of dynamic audio graph topologies.  One application of Jamoma Multicore is the creation of ``multichannel signals" that can be passed between objects in Max/MSP or Pure Data. These multichannel signals are also dynamic, meaning that the number of channels can be changed instantaneously. % and the audio graph will adapt accordingly.  
+The signals can also carry encoded audio signals such as the Ambisonics B-format of the Nth order.
 
  
 \subsection{Holo-Edit}
