work on describing the encoded audio layer
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5054 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -205,7 +205,7 @@ The Tools used for authoring and rendering must comply to these recommendations 
 
 \subsection{A layered approach to the spatialization workflow}\label{sec:layers}
 %TROND, J45CH\\
-In order to better grasp the structural and methodological entities used in a spatialization process, a layered approach is proposed, which defines the problem domains in an ascending order of abstraction (Table \ref{fig:layers}). This model gets its inspiration from the OSI network model\footnote{\url{http://en.wikipedia.org/wiki/OSI_model}}, which is an abstract description for layered communications and computer network protocol design. OSI (Open Systems Interconnection) divides network architecture into seven layers that range from top to bottom between the Application and Physical Layers.
+In order to better grasp the structural and methodological entities used in a spatialization process, a layered approach is proposed, which defines the problem domains in an ascending order of abstraction (Figure \ref{fig:layers}). This model gets its inspiration from the OSI network model\footnote{\url{http://en.wikipedia.org/wiki/OSI_model}}, which is an abstract description for layered communications and computer network protocol design. OSI (Open Systems Interconnection) divides network architecture into seven layers that range from top to bottom between the Application and Physical Layers.
 Each OSI-layer contains a collection of conceptually similar functionalities that provide services to the layer above it and receives service from the layer below it. The adaptation of concepts originally designed for network protocols to computer music systems was legitimized, for instance, in creating the popular Open Sound Control (OSC) protocol \cite{wright1997osc}. 
 %A layer is a collection of conceptually similar functions that provide services to the layer above it and receives service from the layer below it. For example, a layer that provides error-free communications across a network provides the path needed by applications above it, while it calls the next lower layer to send and receive packets that make up the contents of the path.
 %
@@ -254,8 +254,8 @@ Each OSI-layer contains a collection of conceptually similar functionalities tha
 \subsubsection{Physical Device Layer}
 The major functionality of the Physical Device Layer is to establish the physical relationship between computer and user.                                                       
 It defines the electrical and physical specifications of peripherical devices that creates the acoustical signals, such as soundcards, loudspeakers, and headphones, but also of interface devices and computer screens to visualize and control spatial sound processes. 
-\subsubsection{Decoded Audio Stream Layer}
-TODO
+\subsubsection{Decoded Audio Layer}
+This layer contains the audio deamon that runs in the background of a computer OS and manages multichannel audio data between the physical devices and higher layers. Extensions such as JACK, Soundflower, or Rewire can be used for more complex distributions of audio signals among different audio applications. 
 \subsubsection{Encoded Audio Stream Layer}	
 TODO
 \subsubsection{DSP / Rendering Layer}
@@ -278,14 +278,13 @@ TODO: maybe the tools should be organized according to the layers - hmmm... yes,
 The ICST ambisonics tools comprise a set of four externals for Max/MSP. The two DSP externals ambiencode~ and ambidecode~ generate and decode Higher Order Ambisonics. They reach 3rd order with Furse-Malham Formulas in version 1.2, and 5th order using either the Furse-Malham or Normalized 3D formulas in version 2.0. The two control externals ambimonitor and ambicontrol complete the set. Ambimonitor presents the user with a GUI displaying point sources in an abstract 2D or 3D space, various key commands, snapshot and file I/O capabilities and it generates coordinate information for the DSP objects. Ambicontrol provides a number of methods that control motion of points in the Ambimonitor's dataset. Automated motions such as rotation, random motion, optionally constrained in bounding volumes and user defined trajectories can be applied to single or grouped points. The import/export format for the trajectories and state snapshots is a simple XML text file, which will be replaced by a SpatDIF compliant formatting in a next release. \cite{Schacher:2006ambi_max} At ICST a different panning algorithm \cite{Neukom:2008ambipan} was derived from in-phase ambisonic decoding and also coded as Max/MSP external. Ambipanning~ implements the Ambisonic Equivalent Panning, which transcodes in one step a set of mono sources onto a ideally circular speaker setup with an arbitrary number of speakers. The algorithm works with a continuous order factor, which permits to apply per point individually varying directivity responses. This external understands the same command syntax and becomes interchangeable with the other ICST ambisonic DSP objects. 
 \subsection{Jamoma}
 
-Jamoma\footnote{\url{http://www.jamoma.org}} is a collaborative set of software tools\cite{Place:2006jamoma}. It consists of a DSP libraries and a framework for structuring Max/MSP patches.\\
+Jamoma\footnote{\url{http://www.jamoma.org}} is a open-source software\cite{Place:2006jamoma} to facilitate artistic and scientific work with Max/MSP. It consists of a DSP library and a modular framework for structuring patches.\\
 Among others, the Jamoma Modular Framework provides a modular set of popular spatialization algorithms, as there were VBAP \cite{Pulkki:2000vbap_max}, ambisonics \cite{Schacher:2006ambi_max}, ViMiC\cite{CMJ08-VIMIC}, and , DBAP \cite{dbapICMC09}. ViMiC and DBAP can be applied to non-conventional and non-standardized loudspeaker arrangements and therefore provides alternative solutions to the limitations outlined in section \ref{sec:digital audio workstations - DAW}. In particularly, DBAP has been proven to be useful in theaters and sound installation context.\\   
 Furthermore, a number of spatial effects modules (Doppler, Airfilter, RollOff, Reverb), as well as multichannel recording \& playback modules, and other utilities to facilitate the work with multichannel audio (loudspeaker setup definition tools including sound-pressure and delay compensation for non-equidistant arrangements, multichannel auxiliaries, level-meters) are provided.
 %that can be combined and substituted with each other to quickly compare, audition, or adapt each of them to a specific context. 
-All these modules have been designed according to a common namespace model, that enables the user to rapidly combine or substituted modules in order to adapt to a specific requierements. In particular, the interoperability with Holo-Edit, ICST Ambimonitor and physical interfaces, such as Lemur\footnote{\url{http://www.jazzmutant.com}} or TUIO-compliant \cite{kaltenbrunner2005tpt} multitouch devices\footnote{We apply the MMF: \url{http://code.google.com/p/mmf}.} facilitates the individual control to Jamoma's rendering modules.\\
+All these modules have been designed according to a common namespace model, that enables the user to rapidly combine or substituted modules in order to adapt to a specific requierements. In particular, the interoperability with Holo-Edit, ICST Ambimonitor and physical interfaces, such as Lemur\footnote{\url{http://www.jazzmutant.com}} or TUIO-compliant \cite{kaltenbrunner2005tpt} multitouch devices through MMF\footnote{\url{http://code.google.com/p/mmf}} facilitates the individual control to Jamoma's rendering modules.\\
 Current low-level spatial-systems development in Jamoma is focused on Jamoma Multicore\footnote{\url{http://code.google.com/p/jamulticore}}, a coding layer for the creation of dynamic audio graph topologies.  One application of Jamoma Multicore is the creation of ``multichannel signals" that can be passed between objects in Max/MSP or Pure Data. These multichannel signals are also dynamic, meaning that the number of channels can be changed instantaneously. % and the audio graph will adapt accordingly.  
-The signals can also carry encoded audio signals such as the Ambisonics B-format of the Nth order.
-
+The signals can also carry encoded audio signals such as the Ambisonics B-format of any order.
  
 \subsection{Holo-Edit}
 Initiated by L. Pottier \cite{PottierDAFX98}, Holo-Edit is part of the GMEM Holophon project and dedicated to multi-source and multi-speaker spatialization. This standalone application \cite{Pottier05} is written in Java / OpenGL and uses the timeline paradigm found in traditional DAWs for recording, editing, and playback of spatialization control messages. The data is manipulated in the form of trajectories or sequences of time-tagged points in a 3D space. These trajectories can be generated or modified by an expandable set of tools allowing specific spatial and temporal behaviors including symmetry, proportion, translation, acceleration, and local exaggeration. Different scene representation windows allow the user to view and modify data focusing on different aspects: \emph{Room} by a top view of the virtual space, \emph{Time Editor} which is related to the classic automation curve view in DAWs and \emph{Score} which represents the whole composition in a multi-track block-based view.\\
